# rs-prometheus-docker-sd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  devshell.toml  docker-compose.yaml  docker-compose.yml  flake.nix  overlay.nix
src/: main.rs  types.rs
